fixed styling and date on mobile

--- a/src/Components/Declaration/Content/Content.scss
+++ b/src/Components/Declaration/Content/Content.scss
@@ -5,6 +5,7 @@
     margin-right: auto;
     margin-left: auto;
     padding-top: 20px;
+    width: 100%;
     padding-bottom: 40px;
     > h1 {
         text-align: center;
