--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -1,20 +1,20 @@
-.Header{
-	flex: 0 0 auto;
-	background-color: #fff;
-	display: flex;
-	flex-direction: row;
-	justify-content: space-around;
-	img{
-		cursor: pointer;
-		width: 110px;
-		margin: 5px;
-	}
+.Header {
+    flex: 0 0 auto;
+    background-color: #fff;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    img {
+        cursor: pointer;
+        width: 80px;
+        margin: 5px;
+    }
 }
-@media screen and (max-width: 1100px){
-	.Header{
-		img{
-			width: 60px;
-			margin: 10px;
-		}
-	}
+@media screen and (max-width: 1100px) {
+    .Header {
+        img {
+            width: 60px;
+            margin: 10px;
+        }
+    }
 }
