--- a/src/Components/PrepareQuestionsPage/DevicePicker/DevicePicker.scss
+++ b/src/Components/PrepareQuestionsPage/DevicePicker/DevicePicker.scss
@@ -1,5 +1,5 @@
 .DevicePicker {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     margin-bottom: 50px;
 }
